--- a/05. Applications/backend-service/sentiment/requirements.txt
+++ b/05. Applications/backend-service/sentiment/requirements.txt
@@ -1,2 +1,26 @@
-tensorflow
-web.py==0.40-dev1
+absl-py==0.2.1
+astor==0.6.2
+astroid==1.6.0
+bleach==1.5.0
+certifi==2018.4.16
+chardet==3.0.4
+gast==0.2.0
+grpcio==1.12.0
+html5lib==0.9999999
+idna==2.6
+isort==4.2.15
+lazy-object-proxy==1.3.1
+Markdown==2.6.11
+mccabe==0.6.1
+numpy==1.14.3
+protobuf==3.5.2.post1
+pylint==1.8.1
+requests==2.18.4
+six==1.11.0
+tensorboard==1.8.0
+tensorflow==1.8.0
+termcolor==1.1.0
+urllib3==1.22
+web.py==0.40.dev1
+Werkzeug==0.14.1
+wrapt==1.10.11
