--- a/05. Applications/mobile/package.json
+++ b/05. Applications/mobile/package.json
@@ -6,5 +6,8 @@
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
     "react-navigation": "^2.0.1"
+  },
+  "devDependencies": {
+    "react-native-dotenv": "^0.1.1"
   }
 }
