--- a/05. Applications/backend-service/sentiment/requirements.txt
+++ b/05. Applications/backend-service/sentiment/requirements.txt
@@ -9,6 +9,8 @@ grpcio==1.12.0
 html5lib==0.9999999
 idna==2.6
 isort==4.2.15
+joblib==0.11
+langdetect==1.0.7
 lazy-object-proxy==1.3.1
 Markdown==2.6.11
 mccabe==0.6.1
@@ -24,4 +26,3 @@ urllib3==1.22
 web.py==0.40.dev1
 Werkzeug==0.14.1
 wrapt==1.10.11
-joblib==0.11
