--- a/05. Applications/mobile/app.json
+++ b/05. Applications/mobile/app.json
@@ -17,17 +17,15 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
       "infoPlist": {
         "infoPlist": {
-          "NSAppTransportSecurity" : {
-            "NSAllowsArbitraryLoads" : true,
-            "NSAllowsArbitraryLoadsForMedia": true, 
-            "NSAllowsArbitraryLoadsInWebContent": true, 
+          "NSAppTransportSecurity": {
+            "NSAllowsArbitraryLoads": true,
+            "NSAllowsArbitraryLoadsForMedia": true,
+            "NSAllowsArbitraryLoadsInWebContent": true,
             "NSExceptionAllowsInsecureHTTPLoads": true
           }
         }
